--- a/accion.html
+++ b/accion.html
@@ -29,27 +29,35 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html">Inicio</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link text-white dropdown-toggle" href="#" id="categorias-btn" role="button">
-                Categorías
-              </a>
-              <ul class="dropdown-menu" id="categorias-lista">
-                <li><a class="dropdown-item" href="accion.html">Acción</a></li>
-                <li><a class="dropdown-item" href="rpg.html">RPG</a></li>
-                <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
-                <li><a class="dropdown-item" href="lucha.html">Lucha</a></li>
-                <li><a class="dropdown-item" href="shooters.html">Shooters</a></li>
-                <li><a class="dropdown-item" href="plataformas.html">Plataformas</a></li>
-              </ul>
+            <li class="nav-item" id="categorias">
+              <a class="nav-link text-white" href="#" id="categorias-btn">Categorías</a>
+              <div id="categorias-lista" class="dropdown-menu" style="display: none;">
+                <a class="dropdown-item" href="accion.html">Acción</a>
+                <a class="dropdown-item" href="rpg.html">RPG</a>
+                <a class="dropdown-item" href="deportes.html">Deportes</a>
+                <a class="dropdown-item" href="lucha.html">Lucha</a>
+                <a class="dropdown-item" href="shooters.html">Shooters</a>
+                <a class="dropdown-item" href="plataformas.html">Plataformas</a>
+              </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="formulario.html">Registrarse</a>
+              <a class="nav-link text-white" href="formulario.html"
+                >Registrarse</a
+              >
             </li>
             <li class="nav-item">
-              <a id="login-link" class="nav-link text-white" href="login.html">Iniciar Sesión</a>
+              <a id="login-link" class="nav-link text-white" href="login.html"
+                >Iniciar Sesión</a
+              >
             </li>
             <li class="nav-item">
-              <button id="logout-btn" class="btn btn-danger" style="display: none">Cerrar Sesión</button>
+              <button
+                id="logout-btn"
+                class="btn btn-danger"
+                style="display: none"
+              >
+                Cerrar Sesión
+              </button>
             </li>
           </ul>
         </nav>
@@ -126,7 +134,7 @@
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
     <script src="js/sesion.js"></script>
-    <script src="js/listar_categorias.js"></script>
+    <script src="js/listarCategorias.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
