--- a/formulario.html
+++ b/formulario.html
@@ -30,8 +30,14 @@
               <a class="nav-link text-white" href="index.html">Inicio</a>
             </li>
             <li class="nav-item" id="categorias">
-              <a class="nav-link text-white" href="#" id="categorias-btn">Categorías</a>
-              <div id="categorias-lista" class="dropdown-menu" style="display: none;">
+              <a class="nav-link text-white" href="#" id="categorias-btn"
+                >Categorías</a
+              >
+              <div
+                id="categorias-lista"
+                class="dropdown-menu"
+                style="display: none"
+              >
                 <a class="dropdown-item" href="accion.html">Acción</a>
                 <a class="dropdown-item" href="rpg.html">RPG</a>
                 <a class="dropdown-item" href="deportes.html">Deportes</a>
@@ -158,7 +164,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/formulario.js"></script>
     <script src="js/sesion.js"></script>
-    <script src="js/listar_categorias.js"></script>
-    
+    <script src="js/listarCategorias.js"></script>
   </body>
 </html>
