--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
               <a class="nav-link text-white" href="index.html">Inicio</a>
             </li>
             <li class="nav-item" id="categorias">
-  <a class="nav-link text-white" href="#" id="categorias-btn">Categorías</a>
-  <div id="categorias-lista" class="dropdown-menu" style="display: none;">
-    <a class="dropdown-item" href="accion.html">Acción</a>
-    <a class="dropdown-item" href="rpg.html">RPG</a>
-    <a class="dropdown-item" href="deportes.html">Deportes</a>
-    <a class="dropdown-item" href="lucha.html">Lucha</a>
-    <a class="dropdown-item" href="shooters.html">Shooters</a>
-    <a class="dropdown-item" href="plataformas.html">Plataformas</a>
-  </div>
-</li>
+              <a class="nav-link text-white" href="#" id="categorias-btn"
+                >Categorías</a
+              >
+              <div
+                id="categorias-lista"
+                class="dropdown-menu"
+                style="display: none"
+              >
+                <a class="dropdown-item" href="accion.html">Acción</a>
+                <a class="dropdown-item" href="rpg.html">RPG</a>
+                <a class="dropdown-item" href="deportes.html">Deportes</a>
+                <a class="dropdown-item" href="lucha.html">Lucha</a>
+                <a class="dropdown-item" href="shooters.html">Shooters</a>
+                <a class="dropdown-item" href="plataformas.html">Plataformas</a>
+              </div>
+            </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="formulario.html"
                 >Registrarse</a
@@ -145,28 +151,8 @@
     <footer class="footer">
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
-    <script src="js/listar_categorias.js"></script>
+    <script src="js/listarCategorias.js"></script>
     <script src="js/sesion.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const loginLink = document.getElementById("login-link");
-        const logoutBtn = document.getElementById("logout-btn");
-
-        let usuarioActual = localStorage.getItem("usuarioActual");
-        if (usuarioActual) {
-          loginLink.textContent = usuarioActual;
-          loginLink.href = "ver_perfil.html"; // ← redirige al perfil
-          logoutBtn.style.display = "inline-block";
-        }
-
-        if (logoutBtn) {
-          logoutBtn.addEventListener("click", function () {
-            localStorage.removeItem("usuarioActual");
-            window.location.href = "index.html";
-          });
-        }
-      });
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
