--- a/editar_perfil.html
+++ b/editar_perfil.html
@@ -121,8 +121,8 @@
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/editar_perfil.js"></script>
     <script src="js/sesion.js"></script>
+    <script src="js/editarPerfil.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
