--- a/ver_perfil.html
+++ b/ver_perfil.html
@@ -101,43 +101,8 @@
       <p>© 2025 Checkpoint. Todos los derechos reservados.</p>
     </footer>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const usuarioActual = localStorage.getItem("usuarioActual");
-        const usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
-
-        const perfilLink = document.getElementById("perfil-link");
-        const loginLink = document.getElementById("login-link");
-        const logoutBtn = document.getElementById("logout-btn");
-
-        if (usuarioActual) {
-          perfilLink.classList.remove("d-none");
-          loginLink.classList.add("d-none");
-          logoutBtn.style.display = "inline-block";
-        }
-
-        if (!usuarioActual) {
-          alert("Debes iniciar sesión para ver tu perfil.");
-          window.location.href = "login.html";
-          return;
-        }
-
-        const usuario = usuarios.find((u) => u.nombreUsuario === usuarioActual);
-        if (!usuario) {
-          alert("Usuario no encontrado.");
-          return;
-        }
-
-        document.getElementById("nombreCompleto").textContent =
-          usuario.nombreCompleto;
-        document.getElementById("nombreUsuario").textContent =
-          usuario.nombreUsuario;
-        document.getElementById("correo").textContent = usuario.correo || "-";
-        document.getElementById("direccion").textContent =
-          usuario.direccion || "-";
-      });
-    </script>
     <script src="js/sesion.js"></script>
+    <script src="js/verPerfil.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
