--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
       </div>
     </header>
 
+    <section class="banner-videojuegos d-flex justify-content-center align-items-center text-center">
+        <h1 class="display-5 fw-bold">Checkpoint Videojuegos</h1>
+    </section>
+
     <main class="main-content container">
       <h2 class="categorias-title">Categorías</h2>
       <div class="cards-container row gap-4 justify-content-center">
